[gd_scene load_steps=15 format=2]

[ext_resource path="res://entity/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://entity/player/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/hue-bal-newl.png" type="Texture" id=3]
[ext_resource path="res://assets/player-Sheet.png" type="Texture" id=4]
[ext_resource path="res://utils/white.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 5 )
shader_param/is_active = false

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 18 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 18 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=5]
radius = 13.9278

[sub_resource type="ShaderMaterial" id=6]
shader = ExtResource( 5 )
shader_param/is_active = true

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("GreyGuy:material:shader")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GreyGuy:material:shader_param/is_active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "blink"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("GreyGuy:material:shader_param/is_active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0479891, 0.0968124, 0.15629 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}

[sub_resource type="Animation" id=8]
resource_name = "walking"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[node name="Player" groups=["player"] instance=ExtResource( 1 )]
scale = Vector2( 1.1, 1.1 )
script = ExtResource( 2 )

[node name="GreyGuy" type="AnimatedSprite" parent="." index="0"]
material = SubResource( 1 )
position = Vector2( 0, -0.887 )
frames = SubResource( 4 )
animation = "walking"

[node name="Ball" type="Node2D" parent="." index="1"]

[node name="Sprite" type="Sprite" parent="Ball" index="0"]
texture = ExtResource( 3 )

[node name="Purple" type="Position2D" parent="Ball" index="1"]
position = Vector2( 0, -13.061 )

[node name="Yellow" type="Position2D" parent="Ball" index="2"]
position = Vector2( 0.094, 11.15 )

[node name="Red" type="Position2D" parent="Ball" index="3"]
position = Vector2( -12.1031, 0.0346444 )

[node name="Green" type="Position2D" parent="Ball" index="4"]
position = Vector2( 12.1227, -0.0814245 )

[node name="CollisionShape2D" parent="." index="2"]
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="." index="3"]
wait_time = 1.5
one_shot = true
autostart = true

[node name="Sprite" parent="." index="4"]
material = SubResource( 6 )
texture = ExtResource( 4 )
hframes = 2
vframes = 1
frame = 0

[node name="BlinkAnimationPlayer" type="AnimationPlayer" parent="." index="5"]
anims/RESET = SubResource( 9 )
anims/blink = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]
anims/walking = SubResource( 8 )

[node name="ScorePositon" type="Position2D" parent="." index="7"]
position = Vector2( 0, -20.575 )

[node name="InvicTimer" type="Timer" parent="." index="8"]
wait_time = 0.8
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
